Fixed margins for #Button to make header spacing nicer

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -39,6 +39,8 @@ h1 {
 
 #Button{
   text-align: center;
+  margin:auto;
+  margin-top: 1%;
 }
 
 .block{
@@ -64,7 +66,7 @@ h1 {
   width: 100%;
   margin:auto;
   background-color: rgb(138, 5, 5);
-  padding-bottom: 10px;
+  padding-bottom: 1%;
 }
 #logoImg{
   left: 10px;
